--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,7 @@
 .idea/
-/web/node_modules
-/web/dist
-
 .DS_Store
+.env
 
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
 .idea
 .vscode
 *.suo
@@ -21,9 +9,5 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
-
-/server/log/
-/server/gva
-/server/latest_log
 
 *.iml
